--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+
 <head>
-    <title>Title</title>
+    <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <title>Form</title>
+    <script src="iscript.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
+
 <body>
-    <h1>Hello, World, MAAAAAAAAAN!</h1>
+
+<form action="" id="sender" method="post" onsubmit="return checkValues();">
+    <table>
+        <tr>
+            <td>
+                <label for="radius">X: </label>
+                <select required id="x_coord" name="x_coord">
+                  <option value="-4">-4</option>
+                  <option value="-3">-3</option>
+                  <option value="-2">-2</option>
+                  <option value="-1">-1</option>
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+
+                </select>
+            </td>
+            <td>
+                Y:<input id="y_coord" type="text" required name="y_coord" class="indent">
+
+            </td>
+        </tr>
+        <tr>
+            <td>
+                R: <li>
+                <ul><input type="checkbox" onclick="radioImitation(1)" name="chBox" value='1' checked>1 </ul>
+                <ul><input type="checkbox" onclick="radioImitation(1.5)" name="chBox" value='1.5'>1.5 </ul>
+                <ul><input type="checkbox" onclick="radioImitation(2)" name="chBox" value='2'>2 </ul>
+                <ul><input type="checkbox" onclick="radioImitation(2.5)" name="chBox" value='2.5'>2.5 </ul>
+                <ul><input type="checkbox" onclick="radioImitation(3)" name="chBox" value='3'>3 </ul>
+            </li>
+
+            </td>
+            <td>
+                <canvas class="brd" id="graph" onclick="setPoint(event)" width="600" height="600"></canvas>
+                
+            </td>
+        </tr>
+    </table>
+    <input type="submit" value="Отправить">
+</form>
+<h3 class=" h3_first h3_second" align="center"> Points</h3>
+<div style="height: calc(100vh - 200px); overflow-y: scroll;">
+  <div id="for_adding" align="right">
+  </div>
+</div>
 </body>
-</html>
